k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dormwatch-front
  namespace: dormwatch-front
spec:
  type: ClusterIP
  selector:
    app: dormwatch-front
  ports:
    - name: http
      port: 80
      targetPort: http
